@@ -22,14 +22,13 @@
  */
 
 
-package org.openjdk.bench.jdk.incubator.concurrent;
+package org.openjdk.bench.java.lang;
 
-import jdk.incubator.concurrent.ScopedValue;
 import java.util.concurrent.TimeUnit;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.infra.Blackhole;
 
-import static org.openjdk.bench.jdk.incubator.concurrent.ScopedValuesData.*;
+import static org.openjdk.bench.java.lang.ScopedValuesData.*;
 
 /**
  * Tests ScopedValue
@@ -40,10 +39,9 @@ import static org.openjdk.bench.jdk.incubator.concurrent.ScopedValuesData.*;
 @Measurement(iterations=10, time=1)
 @Threads(1)
 @Fork(value = 1,
-      jvmArgsPrepend = {"-Djmh.executor.class=org.openjdk.bench.jdk.incubator.concurrent.ScopedValuesExecutorService",
+      jvmArgsPrepend = {"-Djmh.executor.class=org.openjdk.bench.java.lang.ScopedValuesExecutorService",
                         "-Djmh.executor=CUSTOM",
                         "-Djmh.blackhole.mode=COMPILER",
-                        "--add-modules=jdk.incubator.concurrent",
                         "--enable-preview"})
 @State(Scope.Thread)
 @SuppressWarnings("preview")
